deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metanet-msa-list-service
  namespace: metabank
  labels:
    app: metanet-msa-list-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: metanet-msa-list-service
  template:
    metadata:
      labels:
        app: metanet-msa-list-service
    spec:
      containers:
        - name: metanet-msa-list-service
          image: ykim73094/metanet-msa-list-service:1738996143
          ports:
            - containerPort: 8080
