service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metanet-msa-list-service
  namespace: metabank
spec:
  selector:
    app: metanet-msa-list-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
