ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metanet-msa-migration-fe-ingress
  namespace: metabank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: metanet-msa-migration-fe.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metanet-msa-migration-fe
                port:
                  number: 3000
